--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react-apexcharts": "^1.3.9",
 		"react-countup": "5.2.0",
 		"react-dom": "^18.2.0",
+		"react-dropzone": "^14.3.8",
 		"react-flatpickr": "3.10.7",
 		"react-github-btn": "1.2.1",
 		"react-icons": "^4.3.1",
@@ -73,5 +74,4 @@
 			"last 1 safari version"
 		]
 	}
-
 }
