--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"react-github-btn": "1.2.1",
 		"react-icons": "^4.3.1",
 		"react-router-dom": "^7.2.0",
+		"react-switch": "^7.1.0",
 		"recharts": "^2.15.1",
 		"stylis": "4.0.10",
 		"stylis-plugin-rtl": "2.1.0",
